log
Sun, Apr 13, 2025  5:00:08 PM: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
eeef3b7
Sun, Apr 13, 2025  5:00:42 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
568f1fd
Sun, Apr 13, 2025  5:00:59 PM: 
 hashmap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|6
total_score: 0/70
b56c94e
Sun, Apr 13, 2025  5:01:20 PM: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
555275b
Sun, Apr 13, 2025  5:01:31 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
42b1dce
Sun, Apr 13, 2025  5:01:55 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1b81bad
Sun, Apr 13, 2025  5:02:19 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:59:11: error: expected identifier before '->' token
     mapa->->buckets = NULL ;
           ^~
b0202d2
Sun, Apr 13, 2025  5:02:38 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:59:11: error: expected identifier before '->' token
     mapa->->buckets = NULL ;
           ^~
e0cf016
Sun, Apr 13, 2025  5:02:47 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:59:18: error: '*mapa->buckets' is a pointer; did you mean to use '->'?
     mapa->buckets->buckets = NULL ;
                  ^~
                  ->
8a89415
Sun, Apr 13, 2025  5:03:08 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:59:18: error: '*mapa->buckets' is a pointer; did you mean to use '->'?
     mapa->buckets->buckets = NULL ;
                  ^~
                  ->
86ff971
Sun, Apr 13, 2025  5:03:11 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:59:11: error: expected identifier before '(' token
     mapa->(*buckets) = NULL ;
           ^
4e74228
Sun, Apr 13, 2025  5:03:37 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:59:11: error: expected identifier before '(' token
     mapa->(*buckets) = NULL ;
           ^
96f6fe8
Sun, Apr 13, 2025  5:03:53 PM: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
f40f0e6
Sun, Apr 13, 2025  5:06:47 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ddd3694
Sun, Apr 13, 2025  5:07:12 PM: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|6
total_score: 0/70
247c178
Sun, Apr 13, 2025  5:08:00 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
2d39085
Sun, Apr 13, 2025  5:08:41 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:60:12: error: invalid type argument of '->' (have 'HashMap {aka struct HashMap}')
     (*mapa)->buckets = (Pair *) malloc(sizeof(Pair)) ;
            ^~
97882c9
Sun, Apr 13, 2025  5:09:26 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
7867b53
Sun, Apr 13, 2025  5:09:47 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4a9a96a
Sun, Apr 13, 2025  5:10:14 PM: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:61:1: error: expected ';' before '}' token
 }
 ^
cf720e4
Sun, Apr 13, 2025  5:10:21 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6c97251
Sun, Apr 13, 2025  5:10:31 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
c521cf3
Sun, Apr 13, 2025  5:12:22 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0748b42
Sun, Apr 13, 2025  5:12:28 PM: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|6
total_score: 0/70
9b4ba8b
Sun, Apr 13, 2025  5:13:33 PM: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|6
total_score: 0/70
da9c63f
Sun, Apr 13, 2025  5:14:01 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
a8b2e25
Sun, Apr 13, 2025  5:29:42 PM: 
 hashmap.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
 tests:  0|0
90d7b41
Sun, Apr 13, 2025  5:31:06 PM: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
a0f059f
Sun, Apr 13, 2025  5:31:43 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5c600dc
Sun, Apr 13, 2025  5:34:23 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:47:50: error: expected ')' before 'Pair'
         if (strcmp(map->buckets[i]->key, (char * Pair)key) == 0) return ;
                                                  ^~~~
b513fe7
Sun, Apr 13, 2025  5:34:52 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1c055a8
Sun, Apr 13, 2025  5:35:47 PM: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
bad744e
Sun, Apr 13, 2025  5:38:14 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
ae969e8
Sun, Apr 13, 2025  5:39:10 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
7280006
Sun, Apr 13, 2025  5:39:46 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ddee4dd
Sun, Apr 13, 2025  5:40:10 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6ad3167
